# weather1

my-weather-app/: .vercelignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
my-weather-app/src/app/: layout.tsx  page.tsx
my-weather-app/src/lib/: apolloClient.ts
my-weather-app/src/pages/api/: graphql.ts
my-weather-app/src/queries/: weather.ts
weather_app/: .env  Cargo.toml  Procfile
weather_app/migrations/2024-07-10-063122_weather_data/: down.sql  up.sql
weather_app/src/: graphql.rs  main.rs  models.rs  schema.rs  weather.rs
