[package]
name = "weather_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
async-graphql = { version = "7.0.0", features = ["uuid", "chrono"] }
async-graphql-actix-web = "7.0.0"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }
diesel_migrations = "2.1"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.0", default-features = false, features = [
    "json",
    "rustls-tls",
    "multipart",
] }
actix-files = "0.6.5"
actix-cors = "0.7.0"